Cleanup of the repository. Created a Makefile with basic targets.

--- a/src/ocamltest/META.in
+++ b/src/ocamltest/META.in
@@ -1,4 +1,4 @@
 version = "@VERSION@"
-description = "OCaml unit test framework"
+description = "OCaml Unit Test Framework"
 requires = ""
 archive(native) = "ocamltest.cmxa"
